<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/nomeApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#748AA7"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/appNome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/lblNome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/botao_custom"
        android:gravity="center"
        android:maxLines="1"
        android:padding="5dp" />



    <TextView
        android:id="@+id/lblFaixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/lblFaixa"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

        <Spinner
            android:id="@+id/faixaSpinner"
            android:spinnerMode="dialog"
            android:drawSelectorOnTop="true"
            android:dropDownWidth="wrap_content"
            android:popupElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:padding="10dp">

<Button
    android:id="@+id/btnCadastrar"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/botao_custom2"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/btnCadastrar"
    android:textSize="16sp"
    android:textStyle="bold" />


<Button
    android:id="@+id/btnLimpar"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/botao_custom2"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/btnLimpar"
    android:textSize="16sp"
    android:textStyle="bold" />

</LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/lblCadastro"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    //Tabela de usuarios cadastrados
    <ListView
        android:id="@+id/lstUsuarios"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:layout_margin="5dp"
        android:padding="5dp" />

</LinearLayout>